--- a/src/main/websrc/wrapper.html
+++ b/src/main/websrc/wrapper.html
@@ -1,29 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title></title>
-    <style></style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/styles/atom-one-dark.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-highlight@3.5.0/jquery.highlight.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lunr.js/0.5.7/lunr.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.17.1/build/highlight.min.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
-    <link href="stylesheets/screen-a1ce949a.css" rel="stylesheet" media="screen" />
-    <link href="stylesheets/print-bccf8c07.css" rel="stylesheet" media="print" />
-    <script src="javascripts/all-c5541673.js"></script>
 </head>
 
 <body class="index" data-languages="">
 <a href="#" id="nav-button">
       <span>
         NAV
-        <img src="images/navbar-cad8cdcb.png" alt="Navbar" />
+        <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAAAAABWESUoAAAAAnRSTlMAAHaTzTgAAAAZSURBVHgBYxgswBIIsLFGrIJRBaMKBh4AAE3cQCEvEU3+AAAAAElFTkSuQmCC" alt="Navbar" />
       </span>
 </a>
 <div class="toc-wrapper">
-    <img src="images/logo-1e815a84.png" class="logo" alt="Logo" />
+    <img src="" class="logo" alt="Logo" />
     <div class="lang-selector">
     </div>
     <div class="search">
@@ -33,8 +34,7 @@
     <ul id="toc" class="toc-list-h1">
     </ul>
     <ul class="toc-footer">
-        <li><a href='#'>Sign Up for a Developer Key</a></li>
-        <li><a href='https://github.com/lord/slate'>Documentation Powered by Slate</a></li>
+        <li><a href='https://github.com/codemonstur/slate4j'>Documentation Powered by Slate4j</a></li>
     </ul>
 </div>
 <div class="page-wrapper">
